# ros-scope

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
alerts/: Dockerfile  anomaly.py  detector.py  engine.py  eval_detector.py  model.json  requirements.txt  rules.yaml  train_detector.py
api/: Dockerfile  main.py  metrics.py
api/static/: app.js  index.html  style.css
bench/: Dockerfile  loadgen.py  requirements.txt  stats.py
bridge/: Dockerfile  requirements.txt  ros_bridge.py  ros_demo_bot.py
common/: log.py  schema.py
db/: init.sql
docs/: architecture.md  gazebo.md
ingest/: Dockerfile  worker.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: rosscope.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
sim/: Dockerfile  publisher.py
tests/: test_anomaly.py  test_bench.py  test_detector.py  test_metrics.py  test_rules.py  test_schema.py  test_sim.py
