[project]
name = "rosscope"
version = "0.1.0"
description = "Live telemetry, health, and 3D pose for ROS 2 robot fleets."
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"bridge/ros_bridge.py" = ["E402"]   # sys.path tweak before importing common/

[tool.pytest.ini_options]
testpaths = ["tests"]
